<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jaruwatsukhamjohn.propayment.debtedit">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/innerlayout"
        android:weightSum="1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentTop="true">


        <TextView
            android:id="@+id/DebtnameTextviewE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/paymentname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/DebtnameEdittextE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/enterpaymentname"
            android:inputType="text"
            android:layout_weight="0.05"
            android:maxLength="20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:text="@string/Amount"
            android:id="@+id/DebtAmountTextview" />

        <EditText
            android:id="@+id/DebtamountEdittextE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/enterAmount"
            android:inputType="numberDecimal"
            android:layout_weight="0.05"
            android:maxLength="15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:id="@+id/caledarlayout"
            android:weightSum="1">


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:text="@string/paymentend"
            android:id="@+id/DebtdateEndTextview" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:id="@+id/caledarendlayout"
            android:weightSum="1">

            <EditText
                android:id="@+id/edit_dateEndTextE"
                android:layout_width="131dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_edittext"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:layout_weight="0.73">
            </EditText>

            <ImageButton
                android:id="@+id/DebtEndCalendarImageE"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:cropToPadding="true"
                android:src="@drawable/calendar" />


        </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_marginTop="30dp"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/EDITDebtbutton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.09" />

    </LinearLayout>

</RelativeLayout>
